fx-compat: Fix quick search height shifting

--- a/scss/components/_quickSearchTextbox.scss
+++ b/scss/components/_quickSearchTextbox.scss
@@ -2,6 +2,7 @@
 	font-size: var(--zotero-font-size) !important;
 	margin-right: 0;
 	width: 172px;
+	height: 25px;
 }
 
 #zotero-tb-search-menu-button {
